--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *.class
 *.log
+*.properties
+*.iml
+.idea/
 
 # sbt specific
-.cache/
-.history/
-.lib/
 dist/*
 target/
 lib_managed/
@@ -12,6 +12,14 @@ src_managed/
 project/boot/
 project/plugins/project/
 
+*.properties
+
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+*.sc
+/bin
+.project
+.cache
+.classpath
+.settings
